# HabboClone

./: .gitignore  README.md
client/: index.html  login.js
client/game/: generate_furniture_json.sh  index.html  main.js  styles.css
client/game/assets/furniture/: COLOR PALETTE - CREDITS.txt
client/game/metadata/: avatar.json  furniture.json  objects.json  walls.json
client/login/: login.js  styles.css
server/: CMakeLists.txt  main.cpp
server/core/: Database.hpp
